fix colors and spacing

--- a/css/messages.css
+++ b/css/messages.css
@@ -1,40 +1,36 @@
-div {
-    ;
-}
-
 .message {
     margin-left: 5px;
     margin-right: 5px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding-bottom: 10px;
-    padding-top: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-bottom: 5px;
+    padding-top: 5px;
     border-radius: 10px;
     border-color: #808080
 }
 
 .message-info {
-    color: #4481f0;
+    color: #3b6377;
     border-style: solid;
-    background-color: #6395ed;
+    background-color: #cce5e9;
 }
 
 .message-success {
     border-style: solid;
-    background-color: #90ee00;
-    color: #7fd200;
+    background-color: #b4e0c4;
+    color: #0a6932;
 }
 
 .message-warning {
-    color: #b9c62e;
+    color: #9f8d2f;
     border-style: solid;
-    background-color: #ffff00;
+    background-color: #f3ecbc;
 }
 
 .message-error{
-    color: #e15281;
+    color: #b46074;
     border-style: solid;
-    background-color: #db7093;
+    background-color: #fcd4d4;
 }
 
 body, html {
@@ -45,3 +41,8 @@ body, html {
     font-family: Arial, Ubuntu, sans-serif;
 }
 
+p {
+    margin-left: 10px;
+    margin-top: 1px;
+    margin-bottom: 1px;
+}
